--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -395,7 +395,7 @@ body.plantshare {
         .box {
             font-size: 11px;
             height: 297px;
-            padding: 0 10px;
+            padding: 0 0 0 10px;
             form {
                 float: left;
                 padding: 0;
